--- a/package.json
+++ b/package.json
@@ -4,19 +4,36 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "run-server": "nodemon  ./pages/api/index.ts",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
+    "dotenv": "^15.0.0",
+    "express": "^4.17.2",
+    "joi": "^17.6.0",
+    "mongoose": "^6.1.9",
     "next": "12.0.9",
+    "nodemailer": "^6.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^2.1.2",
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@types/node": "17.0.13",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "17.0.7",
     "@types/react": "17.0.38",
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.9",
-    "typescript": "4.5.5"
+    "@types/styled-components": "^5.1.19",
+    "eslint": "8.6.0",
+    "eslint-config-next": "12.0.7",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0",
+    "typescript": "4.5.4"
   }
 }
